# elang

./: .gitignore  Cargo.toml  README.md
elang_ast/: Cargo.toml
elang_ast/src/: lib.rs
elang_interpreter/: Cargo.toml  spec.md  test.elang
elang_interpreter/src/: ast.rs  interpreter.rs  lib.rs  main.rs  parser.rs  stdlib.rs
elang_interpreter/tests/: integration_test.rs  spec.rs  test_if_let.rs
elang_interpreter/tests/spec/: bindings.rs  control_flow.rs  functions.rs  generics.rs  literals.rs  modules.rs  structs.rs  type_errors.rs
elang_lsp/: Cargo.toml  README.md
elang_lsp/examples/: sample.elang
elang_lsp/src/: analysis.rs  completion.rs  hover.rs  lib.rs  main.rs
elang_lsp/tests/: integration_tests.rs
elang_parser/: Cargo.toml
elang_parser/src/: lib.rs
