[workspace]
resolver = "2"
members = [
    "elang_ast",
    "elang_parser",
    "elang_interpreter",
    "elang_lsp"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elang Team"]
license = "MIT"
repository = "https://github.com/elang/elang"
homepage = "https://elang.dev"
description = "The Elang programming language toolchain"

[workspace.dependencies]
# Shared dependencies across the workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Development dependencies
tokio-test = "0.4"

[profile.release]
# Optimize for performance in release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true