[package]
name = "elang_interpreter"
version = "0.1.0"
edition = "2021"

[lib]
name = "elang_interpreter"
path = "src/lib.rs"

[[bin]]
name = "elang"
path = "src/main.rs"

[dependencies]
elang_ast = { path = "../elang_ast" }
elang_parser = { path = "../elang_parser" }
lexpr = "0.2.7"

[dev-dependencies]
elang_parser = { path = "../elang_parser" }
tempfile = "3.10.1"

[[test]]
name = "spec"
path = "tests/spec.rs"
